# orchestrator

./: .coverage  .cspell.json  .env.defaults  .env.dev  .env.development  .env.example  .env.prod  .env.production  .env.staging  .flake8  .gitignore  .markdownlint.json  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PROJECT.md  README.md  TESTING_TROUBLESHOOTING.md  current_architecture.md  databricks.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-api.txt  testing_overview.md
.ai/: README.md  ai-instructions.md  ai-quick-reference.md  claude-instructions.md  claude-quick-reference.md
backend/: .coverage.Johns-MacBook-Pro.local.84600.XKOJAXyx  .coverage.Johns-MacBook-Pro.local.84609.XeahcRBx  .env.example  alembic.ini  debug_task_listing.py  debug_test.py  requirements.txt  test_api.py  test_api_with_orchestration.py  test_enhanced_listing.py  test_orchestration.py
configs/: providers.yaml
docs/: DOCUMENTATION_STANDARDS.md  MID_TERM_PLAN.md  README.md  architecture.md  mvp_plan.md  testing.md  testing_architecture.md  todo.md
docs_archive/: DOCUMENTATION_MAINTENANCE.md  LONG_TERM_VISION.md  PROGRESS.md  README.md  SHORT_TERM_PLAN.md  data_model.md  docstring_updates.md  mvp_plan.md  todo.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
notebooks/: 00_setup.py  01_agent_interface.py  02_mvp_plan_test.py  10_test_models.py  11_test_agent.py  12_test_config.py  13_test_storage.py  14_test_integrations.py
scripts/: README.md  audit-dependencies.sh  backup-prod.sh  backup_database.py  benchmark-startup.sh  copy-prod-to-staging.sh  database_manager.py  doc-check.sh  env_loader.py  generate-refs.sh  load-env.py  reset-dev.sh  restore_database.py  seed_database.py  setup_development.py  start-dev.sh  start-prod.sh  start-staging.sh  test-backward-compatibility.py  test-env-integration.py  test-env-loading.py  test-env-precedence.py  test-env-security.py  test-npm-scripts.py  test-process-cleanup.py  test-service-coordination.py  test-tooling.sh  update-links.py  validate-tooling.sh  validate_environment.py  workflow_utils.py
(+258 files in other folders)
